--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -4,7 +4,10 @@ La capa de enlace de datos utiliza los servicios de la capa física para enviar 
 3. Regular el flujo de datos para que los emisores no saturen a los receptores.
 
 Para cumplir con estas metas, la capa de enlace de datos toma los paquetes que obtiene de la capa de red y los encapsula en ***tramas***. Cada trama contiene un encabezado, un campo de carga útil y un terminador o cola.
-Los distintos protocolos que forman parte de la capa de enlace definen su propio formato de tramas, las cuales son intercambiadas entre los distintos nodos situados en los extremos del enlace. Cada protocolo define también las acciones que se deben llevar a cabo al momento del envío y recepción de tramas.
+
+>[!note] Diferentes Formatos de Tramas
+>Como veremos cuando hablemos de [[2. Redes de Area Local#Estándar IEEE 802 para Redes de Área Local|redes de área local]], los distintos protocolos que forman parte de la capa de enlace definen su propio formato de tramas, las cuales son intercambiadas entre los distintos nodos situados en los extremos del enlace. Además de definir el conjunto de acciones que se deben llevar a cabo al momento del envío y recepción de tramas.
+
 El servicio básico de cualquier capa de enlace es mover una trama desde un nodo hasta otro adyacente a través de un único enlace de comunicaciones, aunque los detalles acerca de los servicios proporcionados pueden variar de un protocolo a otro. Muchos de los servicios brindados por la capa de enlace presentan notables paralelismos con los servicios de la capa de transporte, no obstante no son lo mismo, ya que están construidos para fines diferentes.
 
 >[!tldr] Implementación de la Capa de Enlace
@@ -19,7 +22,7 @@ Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar
 3. **Bits bandera con relleno de bits**: Es muy similar al método anterior con la diferencia que se utiliza una cantidad de bits arbitraria como delimitador. Para evitar que dicho patrón de bits delimitador se confunda con los contenidos de la carga útil, el emisor al encontrar un patrón similar en la carga útil de la trama reemplaza automáticamente el siguiente bit por uno de escape. Es el receptor el que reemplaza esos bits de escape por sus valores originales.
 4. **Violaciones de codificación de la capa física**: Utiliza un rango de señales determinado a nivel de hardware para indicar el comienzo y final de la trama. Este método resulta muy práctico, dado que existen ciertas señales reservadas que se pueden encontrar el inicio y final de la trama de forma sencilla sin necesidad de rellenar los datos.
 
-Muchos protocolos de capa de enlace usan una combinación de estos métodos por seguridad. Por ejemplo un patrón común utilizado por Ethernet y las redes IEEE 802.11 es hacer que una trama inicie con un patrón bien definido, conocido como ***preámbulo***, dicho patrón podría ser bastante largo de modo que el receptor se pueda preparar para un paquete entrante. El preámbulo va seguido de un campo de longitud en el encabezado, que se utiliza para localizar el final de la trama.
+Muchos protocolos pertenecientes a la capa de enlace usan una combinación de estos métodos por seguridad. Por ejemplo un patrón común utilizado por Ethernet y las redes IEEE 802.11 es hacer que una trama inicie con un patrón bien definido, conocido como ***preámbulo***, dicho patrón podría ser bastante largo de modo que el receptor se pueda preparar para un paquete entrante. El preámbulo va seguido de un campo de longitud en el encabezado, que se utiliza para localizar el final de la trama.
 ## Servicios Brindados por la Capa de Enlace de Datos
 Los servicios proporcionados por la capa de enlace de datos son esenciales para asegurar la transferencia fiable y eficiente de datos entre nodos en una red local. Esta capa se encarga de la detección y corrección de errores, el control de flujo, y de la gestión de acceso al medio compartido, aunque de este tema hablaremos más adelante cuando veamos el estándar IEEE 802.
 ### Servicios de Transmisión
@@ -37,11 +40,11 @@ Otro aspecto importante en el diseño de la capa de enlace de datos es qué hace
 - **Control de flujo basado en retroalimentación**: El receptor envía de regreso información al emisor para autorizarle que envíe más datos o por lo menos indicarle su estado.
 - **Control de flujo basado en tasa**: El protocolo de la capa de enlace posee un mecanismo integrado que limita la tasa a la que el emisor puede transmitir los datos, sin recurrir a la retroalimentación por parte del receptor.
 
-El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal. 
+El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal.
 En este protocolo tanto el emisor como el receptor tienen una “ventana” que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un número $w$ de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía una confirmación para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
-Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación, pero no tiene datos para enviar, se enviará una trama de confirmación.
+Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una trama de datos, el receptor espera a que la capa de red pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación, pero no tiene datos para enviar, se enviará una trama de confirmación.
 
->[!tldr] Envió de Tramas de Confirmación
+>[!info] Envió de Tramas de Confirmación
 >A la hora de enviar ACK al emisor, el receptor no necesita enviar una confirmación individual para todas las tramas, solo basta con enviar cuál es el número de secuencia de la siguiente trama que el receptor espera recibir (Receive Ready).
 >La mayoría de los protocolos también permiten que cualquiera de los participantes pueda interrumpir totalmente la transmisión de tramas desde el otro extremo a través de un mensaje especial (Receive Not Ready).
 
@@ -75,7 +78,7 @@ Este tipo de métodos son eficientes y simples, pero ofrece una protección déb
 Una técnica detección de errores utilizada ampliamente en las redes actuales está basada en los ***códigos de comprobación de redundancia cíclica (CRC)***.
 Considere una secuencia de datos $D$ con una longitud de $d$ bits, que el emisor quiere transmitir. Antes de la transmisión el emisor y el receptor acuerdan un patrón $G$ de $r + 1$ bits, conocido como **polinomio generador**. Para una determinada secuencia de datos $D$, el emisor selecciona $r$ bits (0) adicionales, por lo general la misma cantidad de bits que el grado del polinomio, y se los añadirá a $D$, de modo que el patrón de $d + r$ bits resultante sea exactamente divisible por $G$ utilizando aritmética en módulo 2. El resto de esta operación se agrega al final de la trama para realizar la detección de errores.
 Para realizar el proceso de comprobación de errores, el receptor divide los $d + r$ bits recibidos entre $G$. Si el resto es distinto de cero, el receptor sabrá que se ha producido error; en caso contrario, se aceptarán los datos como correctos. Cada uno de los estándares de CRC puede detectar ráfagas de errores inferiores a $r + 1$ bits. Además, en las condiciones adecuadas, una ráfaga de longitud superior a $r + 1$ bits será detectada con una probabilidad de $1 – \ 0.5^r$.
-#### Técnicas Para la Corrección de Errores
+#### Técnicas para la Corrección de Errores
 Todas las técnicas de corrección de errores agregan cierta redundancia en las tramas enviadas de forma tal que el receptor al detectar un error puede corregirlo en ese mismo instante. Entre los códigos utilizados para la corrección de errores se encuentran los siguientes:
 1. **Códigos de Hamming**.
 2. **Códigos convolucionales binarios**.
@@ -88,7 +91,7 @@ Cada uno de estos métodos tiene sus fortalezas y debilidades, y su elección de
 >La capacidad del receptor para detectar y corregir errores a la vez se conoce con ***corrección de errores hacia adelante (FEC)***. Estas técnicas se suelen utilizar comúnmente en los dispositivos de almacenamiento y reproducción de audio, como por ejemplo los CD de audio. En un entorno de red, las técnicas FEC también pueden emplearse por sí mismas o en conjunción con técnicas ARQ.
 
 ## Protocolos de la Capa de Enlace
-Como veremos más adelante los distintos tipos de redes tienen sus propios protocolos y formatos de trama, nos centraremos en estos momentos en explicar de la forma más resumida posible dos protocolos muy importantes. HDLC que es utilizado en muchos casos como punto de referencia para el desarrollo del resto de protocolos LAN. El segundo de estos protocolos es ARP encargado de realizar la correspondencia entre direcciones IP y direcciones físicas.
+Como veremos más adelante los distintos tipos de redes tienen sus propios protocolos y formatos de trama, nos centraremos en estos momentos en explicar de la forma más resumida posible dos protocolos muy importantes. El primero de ellos es HDLC que es utilizado en muchos casos como punto de referencia para el desarrollo del resto de protocolos LAN. El segundo de estos protocolos es ARP encargado de realizar la correspondencia entre direcciones IP y direcciones físicas.
 
 >[!note] Clasificación de los Protocolos de la Capa de Enlace
 >Los protocolos de comunicación se pueden clasificar en dos categorías principales:
@@ -116,7 +119,7 @@ Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de
 
 El modo de respuesta normal se usa en líneas que disponen de múltiples conexiones, en las que se conectan varios terminales a un computador central; el computador sondea cada una de las entradas correspondientes a los distintos terminales. También se usa a veces en enlaces punto a punto, principalmente si el enlace conecta un terminal u otros periféricos a un computador.
 El modo balanceado asíncrono es el más utilizado de los tres modos; puesto que no se precisa realizar sondeos, y la utilización de enlaces punto a punto *full-duplex* resulta más eficiente con este modo. El modo de respuesta asíncrono es el menos utilizado, empleandose en ciertas situaciones particulares en las que la estación secundaria necesita iniciar la transmisión.
-#### Estructura de Trama
+#### Estructura de la Trama HDLC
 HDLC emplea transmisión síncrona, donde todos los intercambios se realizan mediante tramas, siendo suficiente un único formato de trama para todos los tipos de intercambios de datos e información de control.
 
 ![[trama-hdlc.png]]
@@ -141,7 +144,7 @@ El funcionamiento de HDLC implica tres fases. En la fase de inicio cualquiera de
 Si el otro extremo acepta la solicitud, la entidad HDLC transmitirá una trama de confirmación no numerada al extremo iniciante. Si la solicitud se rechaza, se envía una trama de ***modo desconectado***.
 Una vez aceptada la solicitud de transmisión, se establece una conexión lógica entre ambos extremos dando paso a la fase de transmisión de datos, en esta etapa ambas partes pueden empezar a enviar datos a través de Tramas-I, las cuales son enumeradas desde 0 a $n$ dependiendo de la cantidad de bits utilizados para el número de secuencia. Cada una de estas tramas cuenta con un campo $N(S)$ que contiene el número de secuencia de esa trama y un campo $N(R)$ que se utiliza para llevar a cabo la confirmación de las tramas-I recibidas; indicando al otro extremo el número de trama-I que espera recibir.
 
->[!info] Control de Flujo y Error mediante Tramas-S
+>[!info] Control de Flujo y Error Mediante Tramas-S
 > Las tramas-S también se usan para controlar el flujo y los errores. Este tipo de tramas pueden categorizarse de acuerdo al mensaje que transmiten al emisor:
 > 
 > - **Trama RR**: Confirma la última trama-I recibida mediante la indicación de la siguiente trama-I que se espera recibir. La trama RR se usa cuando no hay tráfico en sentido contrario en el que se puedan incluir las confirmaciones.
