--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Redes de Area Local.md
@@ -1,5 +1,5 @@
 ## Estándar IEEE 802 para Redes de Área Local
-Los protocolos definidos específicamente para la transmisión en redes LAN y MAN tratan cuestiones relacionadas con la transmisión de bloques de datos a través de la red. Según OSI, los protocolos de capas de red y superiores son independientes de la arquitectura de red y son aplicables a cualquier tipo de red. Así pues, el estudio de protocolos LAN está relacionado con las capas inferiores del modelo OSI.
+Los protocolos definidos específicamente para la transmisión en redes LAN y MAN tratan cuestiones relacionadas con la transmisión de bloques de datos a través de la red. Según OSI, los protocolos de capas de red y superiores son independientes de la arquitectura de red y son aplicables a cualquier tipo de red. El estudio de protocolos LAN está relacionado con las capas inferiores del modelo OSI cuya implementación depende de forma más directa del hardware subyasente utilizado.
 El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física definida por este estándar incluye una especificación del los medios de transmisión y la topología de la red. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
 
 >[!info] Redes de Contienda
@@ -20,7 +20,7 @@ Los datos del nivel superior se pasan hacia abajo hasta llegar al nivel LLC, que
 ![[formato-trama.png]]
 
 ### Capa de Control de Enlace Lógico (LLC)
-La capa de *control de enlace lógico* es similar en varios aspectos a otras capas de enlace de uso común, es decir, se encarga de la transmisión de tramas entre dos estaciones adyacentes. La principal diferencia es que esta capa presenta dos características no compartidas por la mayor parte de otros protocolos de control de enlace:
+La capa de *control de enlace lógico* es similar en varios aspectos a la capa de enlace de datos definida por el modelo OSI, es decir, se encarga de la transmisión de tramas entre dos estaciones adyacentes. La principal diferencia es que esta capa presenta dos características no compartidas por la mayor parte de otros protocolos de control de enlace:
 1. Debe admitir accesos múltiples, consecuencia de la naturaleza compartida del medio de transmisión.
 2. La capa de control de acceso al medio lo descarga de algunos detalles de acceso al enlace físico.
 
@@ -29,7 +29,7 @@ El protocolo LLC brinda todos los [[4º Año/Comunicaciones y Redes/Unidad 5/1. 
 
 ![[formato-trama-llc.png]]
 
-Los campos ***DSAP*** (Destination Service Access Point) y ***SSAP*** (Source Service Access Point) contiene una dirección de 7 bits que especifica el destino y el origen. Un bit del campo DSAP indica si la dirección es individual o de grupo, mientras que un bit del campo SSAP indica si la PDU es una orden o una respuesta. El formato del campo de control es idéntico al de HDLC, haciendo uso de números de secuencia de 7 bits.
+Los campos ***DSAP (Destination Service Access Point)*** y ***SSAP (Source Service Access Point)*** contiene una dirección de 7 bits que especifica el destino y el origen. Un bit del campo DSAP indica si la dirección es individual o de grupo, mientras que un bit del campo SSAP indica si la PDU es una orden o una respuesta. El formato del campo de control es idéntico al de HDLC, haciendo uso de números de secuencia de 7 bits.
 
 >[!info] Importancia de la Capa de Control de Enlace Lógico
 >La capa de control de enlace lógico es sumamente importante, ya que es la encargada de abstraer los diferentes formatos de tramas MAC.
