--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas.md
@@ -12,7 +12,7 @@ Las redes LAN inalámbricas se clasifican, generalmente, de acuerdo con la técn
 
 Actualmente, las redes LAN inalámbricas más populares son aquellas que utilizan técnicas de espectro expandido. Este tipo de redes generalmente adoptan una disposición de celdas múltiples donde celdas adyacentes usan diferentes frecuencias para evitar interferencias, pudiendo adoptar una topología basada en concentradores, situados en lugares como el techo y conectados a LAN cableadas, u optar por una configuración entre iguales usando algoritmos MAC como CSMA para controlar el acceso. Los concentradores facilitan la conectividad entre redes y pueden controlar la transición de estaciones móviles entre celdas. Además, es deseable que estas redes operen sin necesidad de licencia.
 El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Estas frecuencias son gestionadas por un regulador y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas.
-### Arquitectura y Servicios IEEE 802.11
+### Arquitectura y Servicios según IEEE 802.11
 En 1990 se formó el comité IEEE 802.11 con el propósito de desarrollar un protocolo MAC y una especificación del medio físico para redes LAN inalámbricas.
 El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, el cual esta compuesta por un número de estaciones que ejecutan el mismo protocolo MAC y compiten por el acceso al mismo medio inalámbrico. Las BSS pueden funcionar de forma aislada o estar conectados a un ***sistema troncal de distribución (DS)*** a través de un ***punto de acceso (AP)*** funcionando como puente entre los distintos BSS existentes. El protocolo de control de acceso al medio puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
 Un ***conjunto extendido de servicios (ESS)*** consiste en dos o más conjuntos básicos de servicios interconectados mediante un sistema de distribución. Este conjunto extendido de servicios aparece a nivel de control de enlace lógico como una única red LAN lógica.
@@ -60,7 +60,7 @@ La espera entre tramas permite una gestión eficiente del tráfico, donde la esp
 La subcapa PCF se implementa por sobre DCF. En este método de acceso existirá un coordinador central que gestiona la red mediante sondeos utilizando un PIFS, que es más corto que un DIFS. Esto permite al coordinador tomar control del medio rápidamente, bloqueando el tráfico asíncrono mientras realiza y recibe respuestas a los sondeos.
 En un escenario extremo, el coordinador podría, teóricamente, monopolizar el medio emitiendo sondeos continuamente, especialmente en redes con estaciones que tienen tráfico sensible a los retardos. Para mitigar esto, se usa una estructura llamada *supertrama*, que divide el tiempo entre un período controlado por el coordinador y un período de contención para acceso asíncrono. Durante la primera parte de la *supertrama*, el coordinador realiza sondeos siguiendo un esquema de turno rotatorio. Después, se reserva un tiempo para que otras estaciones accedan al medio de manera competitiva.
 Este enfoque permite equilibrar entre el control centralizado y el acceso competitivo, asegurando que tanto el tráfico prioritario como el tráfico regular tengan oportunidades de transmisión.
-### Formato de Trama
+### Formato de Trama Wi-Fi
 Si bien existen tres tipos de tramas, el formato genérico de una trama para las redes de área local inalámbricas tiene los siguientes campos:
 - **Control de trama**: Indica el tipo de trama (control, gestión o datos) y proporciona información de control. La información de control indica si la trama proviene o va destinada a un DS, además de información adicional de control y relativa a la privacidad.
 - **ID de duración/conexión**: Si se utiliza como un campo de duración, indica el tiempo (en microsegundos) que el canal será reservado para una transmisión satisfactoria de una trama. En algunas tramas de control, este campo contiene el identificador de una asociación o de una conexión.
