--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -11,16 +11,12 @@ Un medio de transmisión puede ser ***simplex***, ***half-duplex*** o ***full-du
 
 ## Frecuencias, Espectro y Ancho de Banda
 Una ***señal analógica*** es aquella en la que la intensidad de la señal varía suavemente en el tiempo. Es decir, no presenta saltos o discontinuidades. Por el contrario, una ***señal digital*** es aquella en la que la intensidad se mantiene constante durante un determinado intervalo de tiempo, tras el cual la señal cambia a otro valor constante.
+Las ***señales periódicas*** son el tipo de señales más sencillas que se caracterizan por contener un patrón que se repite a lo largo del tiempo. La onda seno es una de las señales periódicas por antonomasia. Una onda seno genérica se representa mediante tres parámetros:
+1. La **amplitud de pico** o simplemente amplitud, es el valor máximo que alcanza una señal respecto a su posición de equilibrio a lo largo del tiempo. Normalmente, es un valor medido en voltios.
+2. La **frecuencia** es la cantidad de ciclos que una señal completa en un segundo. Se mide en ciclos por segundo o Hertz (Hz). Por ejemplo, si una señal tiene una frecuencia de 5 Hz, significa que realiza 5 ciclos completos por segundo.
+3. La **fase** es la posición de un punto en el ciclo de una señal en un momento específico, generalmente medida en grados o radianes. La fase indica si una señal está adelantada o atrasada respecto a otra señal de referencia.
 
->[!tldr] Señales Periódicas
->Las ***señales periódicas*** son el tipo de señales más sencillas que se caracterizan por contener un patrón que se repite a lo largo del tiempo. La onda seno es una de las señales periódicas por antonomasia. Una onda seno genérica se representa mediante tres parámetros:
->
->1. La **amplitud de pico** o simplemente amplitud, es el valor máximo que alcanza una señal respecto a su posición de equilibrio a lo largo del tiempo. Normalmente, es un valor medido en voltios.
->2. La **frecuencia** es la cantidad de ciclos que una señal completa en un segundo. Se mide en ciclos por segundo o Hertz (Hz). Por ejemplo, si una señal tiene una frecuencia de 5 Hz, significa que realiza 5 ciclos completos por segundo.
->3. La **fase** es la posición de un punto en el ciclo de una señal en un momento específico, generalmente medida en grados o radianes. La fase indica si una señal está adelantada o atrasada respecto a otra señal de referencia.
->
->La ***longitud de onda***, denotada como $\lambda$, se define como la distancia que ocupa un ciclo o en otras palabras, la distancia entre dos puntos de igual fase en dos ciclos consecutivos.
-
+La ***longitud de onda***, denotada como $\lambda$, se define como la distancia que ocupa un ciclo o en otras palabras, la distancia entre dos puntos de igual fase en dos ciclos consecutivos.
 En la práctica, las señales electromagnéticas pueden estar compuestas por elementos a múltiples frecuencias. Utilizando el análisis de Fourier, se demuestra que cualquier señal puede descomponerse en componentes sinusoidales de diferentes frecuencias. Al combinar un número adecuado de señales sinusoidales, cada una con su propia amplitud, frecuencia y fase, es posible reconstruir cualquier señal electromagnética.
 Se define el ***espectro*** de una señal como el conjunto de frecuencias que la constituyen. Se denomina ***ancho de banda absoluto*** de una señal a la anchura del espectro. Muchas señales tienen un ancho de banda infinito, pero la mayor parte de la energía de la señal se concentra en una banda de frecuencias relativamente estrecha, esta banda se denomina ***ancho de banda efectivo*** o, simplemente, ancho de banda.
 ### Velocidad de Transmisión, Ancho de Banda y Capacidad de Canal
@@ -37,12 +33,12 @@ Se denomina ***capacidad de canal*** a la cantidad máxima de bits que pueden se
 >
 >$$C = 2 \times B \times log_2 \ M$$
 >
->En este caso $M$ es el número de señales en las que se divide cada cambio de estado. Si bien esta fórmula establece las bases para el cálculo de la capacidad del canal, como no tiene en cuenta el ruido no la taza de error, en la práctica esta ecuación se utiliza para calcular la capacidad teórica del canal.
+>En este caso $M$ es el número de señales en las que se divide cada cambio de estado. Si bien esta fórmula establece las bases para el cálculo de la capacidad del canal, como no tiene en cuenta el ruido ni la taza de error del canal, en la práctica esta ecuación se utiliza para calcular la capacidad teórica del canal.
 
 Existe una relación entre la velocidad de transmisión, el ruido y la tasa de error, puesto que si se aumenta la velocidad de transmisión, la cantidad de bits transmitidos aumenta, de tal manera que dado un patrón de ruido, este afectará a un mayor número de bits. Así pues, dado un nivel de ruido, cuanto mayor es la velocidad de transmisión, mayor es la tasa de errores. Shannon estudió la ***relación señal-ruido (SNR)*** definiéndola matemáticamente a través de la siguiente fórmula:
 $$SNR_{dB} = 10 \times log_{10} \ \frac{S}{R}$$
 
-Donde $S$ es la potencia de la señal y $R$ es la potencia del ruido. Esta expresión muestra, en decibelios, cuánto excede la señal al nivel de ruido. Una SNR alta significará una señal de alta calidad y, por tanto, la necesidad de un número reducido de repetidores.
+Donde $S$ es la potencia de la señal y $R$ es la potencia del ruido. Esta expresión muestra, en decibelios, cuánto excede la señal al nivel de ruido. Una $SNR$ alta significará una señal de alta calidad y, por tanto, la necesidad de un número reducido de repetidores.
 La relación señal-ruido es importante en la transmisión de datos digitales, porque nos permite determinar la máxima velocidad de transmisión que se puede conseguir. Una conclusión que obtuvo Shannon es que la capacidad máxima del canal, en bits por segundo, verifica la siguiente ecuación:
 
 $$C = B \times log_{2} \ (1 + SNR)$$
