[Refactor] fix reference

--- a/3° Año/Automatas y Lenguajes Formales/Unidad 4/2. Maquina Universal de Turing y Computabilidad.md
+++ b/3° Año/Automatas y Lenguajes Formales/Unidad 4/2. Maquina Universal de Turing y Computabilidad.md
@@ -10,7 +10,7 @@ Recibe el nombre de Máquina Universal de Turing debido a que es capas de simula
 >El 21 de junio de 1948, ***Frederic Williams, Tom Kilburn y Geoff Tootil*** ejecutan por primera vez un programa almacenado, en la *SmallScale Experimental Machine* (SSEM), apodada “Baby Machine”, desarrollada en la Universidad de Manchester. La capacidad de almacenamiento de esta máquina era de 32 números y tenía capacidad para 32 instrucciones. El primer programa almacenado tenía 17 instrucciones. Escrito por Tom Kilburn, encontraba el factor más grande de $2^{18}$, programa con el cual se  ejecutaron 3,5 millones de operaciones y 52 minutos.
 
 
-### Tesis de Turing-Charch
+### Tesis de Turing-Church
 
 - **Tesis de Turing**: Todo proceso que corresponda a un procedimiento efectivo puede ser realizado por una Máquina de Turing, es decir, es Turing-computable.
 - **Tesis de Church** Todo proceso que corresponda a un procedimiento efectivo o las funciones efectivamente computables constituyen la clase de *Funciones Recursivas Parciales*. No olvidemos que Church llego a la misma conclusión que Turing, pero mediante la aplicación del ***cálculo lambda***, en lugar del modelo de máquina de Turing.
