--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -127,7 +127,7 @@ Hasta ahora se definió la sintaxis para la demostrabilidad de un teorema y para
 
 ## Nociones Computacionales
 Un método computacional se considera _**completo**_ si, dado cualquier enunciado $P$ dentro de una teoría formal $T$, al tomar $P$ como entrada, el método concluye en un tiempo finito indicando si $P$ es verdadero bajo todas las interpretaciones posibles. Por otro lado, una teoría formal se define como _**decidible**_ si existe un procedimiento efectivo capaz de determinar, para cada enunciado de la teoría, si es probable o no.
-Como podemos observar, estas definiciones son muy similares a las realizadas en la [[2. Maquina Universal de Turing y Computabilidad#Tesis de Turing-Charch|Tesis de Turing-Charch]], la cual establece cuándo un problema es soluble o no desde un punto de vista computacional.
+Como podemos observar, estas definiciones son muy similares a las realizadas en la [[2. Maquina Universal de Turing y Computabilidad#Tesis de Turing-Church|Tesis de Turing-Church]], la cual establece cuándo un problema es soluble o no desde un punto de vista computacional.
 
 >[!tldr] Consistencia de una Teoría Formal
 >Una teoría formal $T$ es consistente si no contiene fórmulas bien formadas tales que tanto las fórmulas como su negación sean teoremas de $T$.
